--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <meta http-equiv="cleartype" content="on" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
     <style>
       html,
       body,
+      div,
       canvas {
         margin: 0 !important;
         padding: 0 !important;
         overflow: hidden !important;
+        width: 100%;
+        height: 100%;
+      }
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
       }
       div {
         width: 100vw;
